Describe your changes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <li>Cards become locked after use for 2 rounds</li>
         <li>Wildcards can only be used once per game</li>
         <li>Last player with tokens wins!</li>
+        <li><b>Every time a player loses two tokens, they must remove an article of clothing.</b></li>
       </ul>
       
       <h3>Card Effects</h3>
@@ -122,10 +123,6 @@
             <div class="card-tooltip">Strong against: Submit&#10;Weak against: Defend, Trap, Attack</div>
           </div>
         </div>
-        <div id="player1-perk-display" class="perk-display">
-          <div class="perk-title">Available Perks</div>
-          <div id="player1-perk-buttons" class="perk-buttons"></div>
-        </div>
       </div>
     </div>
 
@@ -161,10 +158,6 @@
             <img src="images/wildcard.png" alt="Wildcard" onclick="selectCard('WILD')" />
             <div class="card-tooltip">Strong against: Submit&#10;Weak against: Defend, Trap, Attack</div>
           </div>
-        </div>
-        <div id="player2-perk-display" class="perk-display">
-          <div class="perk-title">Available Perks</div>
-          <div id="player2-perk-buttons" class="perk-buttons"></div>
         </div>
       </div>
     </div>
