--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <ul>
         <li>Attack: Strong against Submit, weak against Trap</li>
         <li>Defend: Strong against Attack, weak against Trap</li>
-        <li>Submit: Strong against Trap, weak against Attack</li>
+        <li>Submit: Strong against Trap, weak against Attack. <b>If you win a round with Submit, you gain a random perk!</b></li>
         <li>Trap: Strong against Attack/Defend, weak against Submit</li>
-        <li>Wild: Chaos effect, both players lose tokens</li>
+        <li>Wild: Trumps every card. <b>If Wild beats Submit, it is a strong win (perk and higher punishment). Against Attack, Defend, or Trap, Wild wins as a normal win.</b> If both players play Wild, both lose a token, are punished, and both gain a random perk.</li>
       </ul>
 
       <h3>Perks</h3>
@@ -78,6 +78,7 @@
         <li>Reverse: Reverse the outcome of a round</li>
         <li>Trap: Set a trap that activates on opponent's next move</li>
       </ul>
+      <p style="margin-top:10px;"><b>How to get perks:</b> Win a round with <b>Submit</b> to gain a random perk. If both players play <b>Wild</b> in the same round, both gain a random perk.</p>
     </div>
     <button onclick="hideTutorial()">Start Playing</button>
   </div>
@@ -120,7 +121,7 @@
           </div>
           <div class="card wildcard">
             <img src="images/wildcard.png" alt="Wildcard" onclick="selectCard('WILD')" />
-            <div class="card-tooltip">Strong against: Submit&#10;Weak against: Defend, Trap, Attack</div>
+            <div class="card-tooltip">Trumps every card. <b>Strong win (perk) vs Submit.</b> Normal win vs Attack, Defend, Trap. If both play Wild, both lose a token and are punished.</div>
           </div>
         </div>
       </div>
@@ -156,7 +157,7 @@
           </div>
           <div class="card wildcard">
             <img src="images/wildcard.png" alt="Wildcard" onclick="selectCard('WILD')" />
-            <div class="card-tooltip">Strong against: Submit&#10;Weak against: Defend, Trap, Attack</div>
+            <div class="card-tooltip">Trumps every card. <b>Strong win (perk) vs Submit.</b> Normal win vs Attack, Defend, Trap. If both play Wild, both lose a token and are punished.</div>
           </div>
         </div>
       </div>
