--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <label style="font-weight:bold; font-size:1.1em; color:#a62a28;">
         <input type="checkbox" id="cpu-toggle" style="transform:scale(1.3); margin-right:8px;"> Play vs CPU
       </label>
-      <label style="font-weight:bold; font-size:1.1em; color:#a62a28;">
+      <label style="font-weight:bold; font-size:1.1em; color:#a62a28;" title="Party Mode: Audience can add custom punishments and use the digital punishment wheel!">
         <input type="checkbox" id="party-toggle" style="transform:scale(1.3); margin-right:8px;"> Party Mode 🎉
       </label>
     </div>
@@ -84,10 +84,11 @@
     </div>
     <p>Select your game mode:</p>
     <div class="mode-buttons">
-      <button onclick="startGame('Easy')" title="Gentle: 8 tokens per player. Light, playful punishments. Good for beginners.">Easy</button>
-      <button onclick="startGame('Medium')" title="Standard: 6 tokens per player. Moderate punishments. Balanced challenge.">Medium</button>
-      <button onclick="startGame('Hard')" title="Intense: 5 tokens per player. Explicit, challenging punishments. For experienced players.">Hard</button>
-      <button onclick="startGame('Extreme')" title="Extreme: 4 tokens per player. Very explicit, high-stakes punishments. For advanced players only.">Extreme</button>
+      <button onclick="startGame('Easy')" title="Gentle: Light, playful punishments. Good for beginners.">Easy</button>
+      <button onclick="startGame('Medium')" title="Standard: Moderate punishments. Balanced challenge.">Medium</button>
+      <button onclick="startGame('Hard')" title="Intense: Explicit, challenging punishments. For experienced players.">Hard</button>
+      <button onclick="startGame('Extreme')" title="Extreme: Very explicit, high-stakes punishments. For advanced players only.">Extreme</button>
+      <button onclick="startGame('escalating')" title="Escalating: Start easy, but punishments get harsher as you lose tokens!">Escalating</button>
     </div>
     <button id="tutorial-btn" onclick="showTutorial()">How to Play</button>
   </div>
